[package]
name = "rs_remote_test"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
base64 = "0.22"
cxx = "1.0"
dotenvy = "0.15"
hmac-sha = "0.6"
random-string = "1.1"
reqwest = { version = "0.12", features = ["json"] }
rs_hmac = "0.1"
rs_sha256 = "0.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_UI_WindowsAndMessaging"
]

[build-dependencies]
cxx-build = "1.0"
